@@ -13,7 +13,11 @@
     &middot;
     = pluralize(tag.layers.size, "layer")
   %td
-    = time_ago_in_words(tag.created_at)
+    - if tag.created_at
+      = time_ago_in_words(tag.created_at)
+    - else
+      .light
+        \-
   - if can?(current_user, :update_container_image, @project)
     %td.content
       .controls.hidden-xs.pull-right
